--- a/raw_highlight.html
+++ b/raw_highlight.html
@@ -49,7 +49,6 @@
 <span class="n">W_pos</span><span class="p">:</span> <span class="n">SizedArr</span><span class="p">[(</span><span class="n">N_seq</span><span class="p">;</span> <span class="n">N_model</span><span class="p">)]</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">normal</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="p">(</span><span class="n">n_seq</span><span class="p">,</span> <span class="n">n_model</span><span class="p">))</span>
 
 <span class="n">W_unenc</span><span class="p">:</span> <span class="n">SizedArr</span><span class="p">[(</span><span class="n">N_model</span><span class="p">;</span> <span class="n">N_vocab</span><span class="p">)]</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">normal</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="p">(</span><span class="n">n_model</span><span class="p">,</span> <span class="n">n_vocab</span><span class="p">))</span>
-<span class="n">b_unenc</span><span class="p">:</span> <span class="n">SizedArr</span><span class="p">[(</span><span class="n">N_vocab</span><span class="p">;)]</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">normal</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="p">(</span><span class="n">n_vocab</span><span class="p">,))</span>
 
 <span class="n">ln_gain_unenc</span><span class="p">:</span> <span class="n">SizedArr</span><span class="p">[(</span><span class="n">N_model</span><span class="p">;)]</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">normal</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="p">(</span><span class="n">n_model</span><span class="p">,))</span>
 <span class="n">ln_bias_unenc</span><span class="p">:</span> <span class="n">SizedArr</span><span class="p">[(</span><span class="n">N_model</span><span class="p">;)]</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">random</span><span class="o">.</span><span class="n">normal</span><span class="p">(</span><span class="n">size</span><span class="o">=</span><span class="p">(</span><span class="n">n_model</span><span class="p">,))</span>
@@ -166,7 +165,6 @@
         <span class="o">..&gt;</span> <span class="p">(</span><span class="o">.</span> <span class="o">+</span> <span class="n">ln_bias_unenc</span><span class="p">)</span>
     <span class="p">)</span>
     <span class="o">..&gt;</span> <span class="p">(</span><span class="o">.</span> <span class="o">@</span> <span class="n">W_unenc</span><span class="p">)</span>
-    <span class="o">..&gt;</span> <span class="p">(</span><span class="o">.</span> <span class="o">+</span> <span class="n">b_unenc</span><span class="p">)</span>
 <span class="p">)</span>  <span class="c1"># type: ignore</span>
 
 
@@ -182,7 +180,7 @@
     <span class="k">for</span> <span class="n">layer</span> <span class="ow">in</span> <span class="n">transformer_layers</span><span class="p">:</span>
         <span class="n">residual</span> <span class="o">|&gt;=</span> <span class="n">layer</span>
     <span class="n">residual</span> <span class="o">|&gt;=</span> <span class="n">layer_norm</span><span class="o">$</span><span class="p">(</span><span class="n">ln_gain_unenc</span><span class="p">,</span> <span class="n">ln_bias_unenc</span><span class="p">)</span>
-    <span class="k">return</span> <span class="n">residual</span> <span class="o">@</span> <span class="n">W_unenc</span> <span class="o">+</span> <span class="n">b_unenc</span>
+    <span class="k">return</span> <span class="n">residual</span> <span class="o">@</span> <span class="n">W_unenc</span>
 
 <span class="k">def</span> <span class="nf">layer_norm</span><span class="p">(</span>
     <span class="n">gain</span><span class="p">:</span> <span class="n">SizedArr</span><span class="p">[(</span><span class="n">N_model</span><span class="p">;)],</span>
